<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" 
   >
    
 	<TextView
        android:id="@+id/txtRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textSize="25sp" />
 	
	<TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegistry"
        android:layout_marginRight="18dp"
        android:layout_marginTop="68dp"
        android:layout_toLeftOf="@+id/txtRegistry"
        android:text="@string/loginName"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edtAccount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:layout_alignBottom="@+id/txtAccount"
        android:layout_toRightOf="@+id/txtEmail"
        android:ems="10"
        android:inputType="textPersonName" />
   	
   	<TextView
        android:id="@+id/txtPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAccount"
        android:layout_below="@+id/txtAccount"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPasswd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:layout_alignBottom="@+id/txtPasswd"
        android:layout_alignLeft="@+id/edtAccount"      
        android:inputType="textPassword" />
	<TextView
        android:id="@+id/txtConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPasswd"
        android:layout_below="@+id/txtPasswd"
        android:layout_marginTop="28dp"
        android:text="@string/confirm"
        android:textSize="20sp" />
	<EditText
        android:id="@+id/edtConfirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:layout_alignBottom="@+id/txtConfirm"
        android:layout_alignLeft="@+id/edtPasswd"
        android:ems="10"
        android:inputType="textPassword" />
	
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtConfirm"
        android:layout_below="@+id/edtConfirm"
        android:layout_marginTop="24dp"
        android:text="@string/mail"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:layout_alignBottom="@+id/txtEmail"
        android:layout_alignLeft="@+id/edtConfirm"
        android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>
    
	<TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="17dp"
        android:text="@string/question"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="40"
        android:layout_alignLeft="@+id/edtEmail"
        android:layout_below="@+id/txtQuestion"
        android:ems="10"
        android:inputType="textMultiLine" />
    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtQuestion"
        android:layout_below="@+id/edtQuestion"
        android:text="@string/answer"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_alignLeft="@+id/edtEmail"
        android:layout_below="@+id/txtAnswer"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:ems="10" />

    <ImageButton
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtRegistry"
        android:layout_below="@+id/edtAnswer"
        android:layout_marginTop="45dp"
        android:background="#00000000"
        android:contentDescription="@string/register"
        android:src="@drawable/register1" />

</RelativeLayout>
