<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bground"
    tools:context=".Activity_login" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout 
            android:focusable="true" 
            android:focusableInTouchMode="true"
             android:layout_width="0px" 
             android:layout_height="0px">
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />
        
            
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        
                        android:text="@string/name"
                     
                       />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="30dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edtAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.78"
                        android:inputType="textPersonName" >

                       
                    </EditText>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                   
                    android:layout_gravity="left|bottom"
                   android:layout_weight="2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                    
                        android:text="@string/password" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="30dp"
                   android:layout_weight="0.5"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edtPasswd"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                   
                    
                    android:text="@string/login" />

            </LinearLayout>
			
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal" >
                <TextView 
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    
                    android:text="@string/forgetPassword"
                    />
                <TextView 
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                   
                    android:text="@string/regester"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
